test/successor_ml/should_not_compile/nonexhaustive_bind_2.sml
let val { ... = { a = SOME f } } = { a = SOME (fn x => x) }
in f 1;
   f "y"
end;
